update security and add methods
