# src/main/java/org/com/hub/caixa/controller/LoanControllerImpl.java
@@ -6,6 +6,7 @@ import com.hub.caixa.model.UpdateLoanStatusRequest;
 import org.com.hub.caixa.service.LoanService;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
+import org.springframework.web.bind.annotation.RequestHeader;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
@@ -22,18 +23,19 @@ public class LoanControllerImpl implements LoansApi {
 
     @Override
     @PreAuthorize("hasRole('CLIENT')")
-    public ResponseEntity<LoanDTO> createLoan(LoanDTO loanDTO) {
-        LoanDTO created = loanService.createLoan(loanDTO);
+    public ResponseEntity<LoanDTO> createLoan(@RequestHeader("X-User-Id") UUID userId, LoanDTO loanDTO) {
+        LoanDTO created = loanService.createLoan(loanDTO, userId);
         return ResponseEntity.ok(created);
     }
 
     @Override
-    public ResponseEntity<LoanDTO> getLoanById(UUID id) {
-        //TODO: add an user can only access to their own loans
+    @PreAuthorize("@securityConfig.isOwnerOrManager(#id, #xUserId)")
+    public ResponseEntity<LoanDTO> getLoanById(UUID id, UUID xUserId) {
         Optional<LoanDTO> optional = loanService.getLoan(id);
         return optional.map(ResponseEntity::ok)
                 .orElse(ResponseEntity.notFound().build());
     }
+
 
     @Override
     @PreAuthorize("hasRole('MANAGER')")
